[gd_scene load_steps=2 format=3 uid="uid://b0o0e50tb6gea"]

[ext_resource type="Script" path="res://scripts/MainMenu/SubmenuButton.gd" id="1"]

[node name="SubmenuButton" type="Button"]
custom_minimum_size = Vector2(0, 60)
offset_right = 300.0
offset_bottom = 60.0
theme_type_variation = &"MyMenuButton"
script = ExtResource("1")

[node name="SubmenuBg" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 300.0
offset_right = 600.0
theme_type_variation = &"SolidPanel"

[node name="OptionSeparator" type="VBoxContainer" parent="SubmenuBg"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[connection signal="item_rect_changed" from="." to="." method="_on_rect_changed"]
[connection signal="pressed" from="." to="." method="_on_OptionButton_pressed"]
